# NorMI

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  extra-requirements.txt  flake8-CI.cfg  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: codeql.yml  pages.yml  pytest.yml  python-publish.yml
changelog/: index.html
contributing/: index.html
css/: extra.css
docs/: contributing.md  faq.md  gen_ref_nav.py  index.md  maintenance.md
docs/css/: extra.css
faq/: index.html
license/: index.html
maintenance/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/cli/: index.html
search/: search_index.json
src/nmi/: __init__.py  __main__.py  _estimators.py  _typing.py  estimators.py
src/normi/: __init__.py  __main__.py  _estimators.py  _typing.py  _utils.py
tests/: pypi_test.py  test__estimators.py  test__utils.py
